# oca-account-invoicing

./: README.md
account_invoice_show_currency_rate/: README.rst
account_invoice_show_currency_rate/models/: account_move.py
account_invoice_show_currency_rate/static/description/: index.html
account_invoice_show_currency_rate/tests/: test_account_move.py
account_invoice_show_currency_rate/views/: account_move_view.xml
purchase_stock_picking_return_invoicing/: README.rst
purchase_stock_picking_return_invoicing/static/description/: index.html
setup/_metapackage/: pyproject.toml
