[project]
name = "odoo-addons-oca-account-invoicing"
version = "18.0.20250217.0"
dependencies = [
    "odoo-addon-account_invoice_fiscal_position_update==18.0.*",
    "odoo-addon-account_invoice_refund_link==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
