[project]
name = "odoo-addons-oca-account-invoicing"
version = "18.0.20250220.0"
dependencies = [
    "odoo-addon-account_invoice_fiscal_position_update==18.0.*",
    "odoo-addon-account_invoice_refund_link==18.0.*",
    "odoo-addon-purchase_stock_picking_return_invoicing==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
